<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="enter_your_name">Enter your Name:</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number:</string>
    <string name="enter_the_group_size">Enter the Group Size:</string>
    <string name="name">Name:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="group_size">Group Size:</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="non_smoking_area">Non-Smoking Area</string>
    <string name="reservation">Reservation</string>
    <string name="reset">Reset</string>
    <string name="reserve">Reserve</string>
    <string name="textview">TextView</string>
</resources>